--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -10,22 +10,16 @@
     </parent>
 
     <artifactId>demo</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>http-demo</module>
+        <module>mcp-server-demo</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-webflux</artifactId>
-        </dependency>
-    </dependencies>
 
 </project>
