--- a/demo/mcp-server-demo/pom.xml
+++ b/demo/mcp-server-demo/pom.xml
@@ -22,6 +22,13 @@
             <groupId>org.springframework.ai</groupId>
             <artifactId>spring-ai-starter-mcp-server-webflux</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.jdt.mcp</groupId>
+            <artifactId>demo</artifactId>
+            <version>${project.version}</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
