--- a/demo/http-demo/pom.xml
+++ b/demo/http-demo/pom.xml
@@ -19,16 +19,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-webflux</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.jdt.mcp</groupId>
-            <artifactId>demo</artifactId>
+            <artifactId>common-demo</artifactId>
             <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
