--- a/demo/mcp-server-demo/pom.xml
+++ b/demo/mcp-server-demo/pom.xml
@@ -29,6 +29,11 @@
             <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jdt.mcp</groupId>
+            <artifactId>auth</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
