--- a/auth/pom.xml
+++ b/auth/pom.xml
@@ -19,6 +19,18 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.jdt.mcp</groupId>
+            <artifactId>core</artifactId>
+            <version>${project.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jdt.mcp</groupId>
+            <artifactId>persist</artifactId>
+            <version>${project.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
