--- a/demo/mcp-client-demo/src/main/resources/application.yml
+++ b/demo/mcp-client-demo/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring.ai.mcp.client:
   sse:
     connections:
       server1:
-        url: http://localhost:8089?key=S71htUY--I0JcFpMtW-_gv4Jkg7cIMlYkZGqIHCl99M
+        url: http://localhost:8080/mcp/hr-service?key=S71htUY--I0JcFpMtW-_gv4Jkg7cIMlYkZGqIHCl99M
   type: async
 
 
