--- a/proxy/src/main/resources/application.yml
+++ b/proxy/src/main/resources/application.yml
@@ -23,6 +23,10 @@ spring:
     date-format: yyyy-MM-dd HH:mm:ss
     serialization:
       write-dates-as-timestamps: false
+  data:
+    redis:
+      host: localhost
+      port: 6379
 
 # MyBatis配置
 mybatis:
