--- a/proxy/src/main/resources/application.yml
+++ b/proxy/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     name: mcp-gateway-proxy
 
   datasource:
-    url: jdbc:mysql://localhost:3306/mcp_gateway?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://localhost:3306/mcp_gateway?useUnicode=true&allowPublicKeyRetrieval=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai
     username: root
     password: McpDB123
     driver-class-name: com.mysql.cj.jdbc.Driver
