--- a/demo/hr-mcp-server-demo/pom.xml
+++ b/demo/hr-mcp-server-demo/pom.xml
@@ -5,19 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.jdt.mcp</groupId>
-        <artifactId>gateway</artifactId>
+        <artifactId>demo</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>demo</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>http-demo</module>
-        <module>hr-mcp-server-demo</module>
-        <module>mcp-client-demo</module>
-        <module>common-demo</module>
-        <module>weather-mcp-server-demo</module>
-    </modules>
+    <artifactId>hr-mcp-server-demo</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -27,8 +19,15 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-webflux</artifactId>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-starter-mcp-server-webflux</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jdt.mcp</groupId>
+            <artifactId>common-demo</artifactId>
+            <version>${project.version}</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
