--- a/demo/hr-mcp-server-demo/src/main/resources/application.yml
+++ b/demo/hr-mcp-server-demo/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   ai:
     mcp:
       server:
-        name: demo-mcp-server
+        name: hr-mcp-server
         version: 0.0.1
 server:
-  port: 8089
+  port: 9002
