--- a/demo/weather-mcp-server-demo/pom.xml
+++ b/demo/weather-mcp-server-demo/pom.xml
@@ -9,7 +9,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>mcp-server-demo</artifactId>
+    <artifactId>weather-mcp-server-demo</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
